Overview of changes in Glib 1.250
=================================

* Add a fallback implementation of SvMAGIC_set; Bugzilla bug #665266
* Avoid a syntax error on older perls
* Glib::Object: make ref-counting compatible with perl >= 5.16 (RT#73650)
* Fix some typos in POD (RT#73616)

Overview of changes in Glib 1.242
=================================

* Glib::GenPod: fix typo in default pspec values
  (https://bugzilla.gnome.org/show_bug.cgi?id=665331)
* Glib::GenPod: delete a duplicate key in %basic_types
  (https://bugzilla.gnome.org/show_bug.cgi?id=665332)
* Change the FSF's address in all GPL license notices (RT#72664)

Overview of changes in Glib 1.241
=================================

* Register the boxed type Glib::GString, based almost completely on a patch by
  Emmanuel Rodriguez (https://bugzilla.gnome.org/show_bug.cgi?id=663881).
* Fix linking against perl < 5.9.4 on some platforms; Do not use
  SvREFCNT_inc_simple_void_NN as that was introduced in perl 5.9.4, which came
  after the 5.8.0 we require.

Overview of changes in Glib 1.240
=================================

 Since 1.22x (the previous stable series)
 ----------------------------------------
  * Add Glib::Param::GType support.
  * Add Glib::Log->set_default_handler() and
    Glib::Log::default_handler().
  * Add Glib::ParamSpec->override() and get_redirect_target().
  * Add Glib::Param->get_default_value().
  * Support the fundamental type Glib::GType.
  * Correctly handle variables with "magic" attached, like tied
    variables.
  * Don't copy boxed objects when passing from Perl to C.

 Since 1.233
 -----------
  * Nada.

Overview of changes in Glib 1.233
=================================

* Change the way we handle objects with floating references again, to be more
  compatible.

Overview of changes in Glib 1.232
=================================

* In the documentation generated by Glib::GenPod, show default values for
  properties.